Fixing alignment and error icon

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background-image: url(/assets/images/background.jpg);
+    background-image: url(/assets/images/background2.jpg);
     background-size: cover;
 }
 
@@ -111,6 +111,7 @@ body{
 }
 
 .error {
+    text-align: center;
     color: #FFFFFF; 
     font-size: 12px;
     margin-top: 30px;
@@ -118,9 +119,8 @@ body{
 }
 
 .error img {
-    max-width: 50%;
+    max-width: 60%;
     height: auto; 
-    display: block; 
     margin-top: 30px;
     margin-bottom: 50px;
 }
